Enhance topic api performace (#4)
* enhance topic api performace

* ehance topic list performance by exclude topic details from the list

* refactor kafk monitoring controller

* remove details from topic list

* refactor kafk monitoring controller

* making summary call async via web socket to avoid http call limitation for big clusters

* chore(socket): apply web socket

* fix filter by payload

* fix socket connection issue

* fix out of range offset

* fix out of range offset

* add refresh topic details button

* add refresh topic details button

* add refresh topic details button

* add refresh topic details button

* add refresh topic details button

* add refresh topic details button

* add refresh topic details button

* add refresh topic details button

* add refresh topic details button

* add refresh topic details button

* allow resizing columns in message grid

Co-authored-by: Mohamed Ragab <mohamed.ragab.ext@aptar.com>